# notebook-operators

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  bundle.yaml  concierge.yaml  juju-crashdump-2f2d0dd9-17a0-4141-824f-5d3159daa058.tar.xz  pyproject.toml  renovate.json  requirements-fmt.txt  requirements-integration.in  requirements-integration.txt  requirements-lint.txt  test-requirements.txt  tox.ini
.github/: automatic_backport_tracks.yaml
.github/workflows/: build_and_scan_images.yaml  build_scan_images.yaml  cd.yaml  check-formatting.yaml  ci.yaml  contributing_update_all.yaml  get-charm-paths.sh  integrate.yaml  on_pull_request.yaml  on_pull_request_closed.yaml  promote.yaml  publish-bundle.yaml  publish.yaml  release.yaml  test-microk8s.yaml  tiobe_scan.yml
charms/jupyter-controller/: CONTRIBUTING.md  README.md  charmcraft.yaml  config.yaml  contributing_inputs.yaml  metadata.yaml  pyproject.toml  requirements-fmt.txt  requirements-integration.in  requirements-integration.txt  requirements-lint.txt  requirements-unit.in  requirements-unit.txt  requirements-update-packages.txt  requirements.in  requirements.txt  test-requirements.txt  tox.ini
charms/jupyter-controller/examples/: sample-notebook.yaml
charms/jupyter-controller/lib/charms/prometheus_k8s/v0/: prometheus_scrape.py
charms/jupyter-controller/reactive/: jupyter_controller.py
charms/jupyter-controller/src/: charm.py  crds.yaml
charms/jupyter-controller/src/grafana_dashboards/: basic.json.tmpl  jupyter-notebook-controller.json.tmpl
charms/jupyter-controller/src/prometheus_alert_rules/: KubeflowJupyterControllerServices.rules  controller.rule  controller.rules  host_resources.rule  host_resources.rules  model_errors.archived_rule  model_errors.rule  model_rules.rule  modle_rules.rule  tempfile  unit_unavailable.rule
charms/jupyter-controller/src/templates/: auth_manifests.yaml.j2  crds.yaml.j2
charms/jupyter-controller/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/jupyter-controller/tests/: test_operator.py
charms/jupyter-controller/tests/integration/: charms_dependencies.py  conftest.py  test_charm.py  test_charm_ambient.py
charms/jupyter-controller/tests/integration/examples/: profile.yaml
charms/jupyter-controller/tests/unit/: __init__.py  test_operator.py
charms/jupyter-ui/: CONTRIBUTING.md  LICENSE  README.md  charmcraft.yaml  config.yaml  contributing.md  contributing_inputs.yaml  coverage.xml  metadata.yaml  pyproject.toml  requirements-fmt.txt  requirements-integration.in  requirements-integration.txt  requirements-lint.in  requirements-lint.txt  requirements-unit.in  requirements-unit.txt  requirements-update-packages.txt  requirements.in  requirements.txt  test-requirements.txt  tox.ini
charms/jupyter-ui/lib/charms/istio_ingress_k8s/v0/: istio_ingress_route.py
charms/jupyter-ui/lib/charms/kubeflow_dashboard/v0/: kubeflow_dashboard_sidebar.py
charms/jupyter-ui/reactive/: jupyter_web.py
charms/jupyter-ui/src/: charm.py  config_validators.py  default-jupyter-images.yaml  default-rstudio-images.yaml  default-vscode-images.yaml  logos-configmap.yaml  resources.py  spawner_ui_config.yaml  spawner_ui_config.yaml.j2
charms/jupyter-ui/src/templates/: auth_manifests.yaml.j2  spawner_ui_config.yaml.j2
charms/jupyter-ui/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
charms/jupyter-ui/tests/: test_operator.py
charms/jupyter-ui/tests/integration/: charms_dependencies.py  conftest.py  test_charm.py  test_charm_ambient.py
charms/jupyter-ui/tests/unit/: test_config_validators.py  test_operator.py
image-definitions/: README.md  apply-patches.sh  build-scan.sh  build.sh  check-update.sh  check.sh  install-tools.sh  kubeflow-patch-commit.txt  kubeflow.patch  publish.sh  scan.sh  send-scan.sh  setup.sh
image-definitions/kubeflow/: version.txt
image-definitions/kubeflow/components/crud-web-apps/common/backend/: setup.py
image-definitions/kubeflow/components/crud-web-apps/common/frontend/kubeflow-common-lib/: package-lock.json  package.json
image-definitions/kubeflow/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/: package-lock.json  package.json
image-definitions/kubeflow/components/crud-web-apps/jupyter/: Dockerfile
image-definitions/kubeflow/components/crud-web-apps/jupyter/frontend/: package-lock.json  package.json
image-definitions/kubeflow/components/example-notebook-servers/: Makefile
image-definitions/kubeflow/components/example-notebook-servers/base/: Dockerfile
image-definitions/kubeflow/components/example-notebook-servers/jupyter-pytorch/: cuda-requirements.txt
image-definitions/kubeflow/components/example-notebook-servers/jupyter-scipy/: requirements.txt
image-definitions/kubeflow/components/notebook-controller/: Dockerfile  Makefile  go.mod  go.sum
security/active/: CVE-2022-29458
tests/: conftest.py  test_charms.py  test_selenium.py
tools/: get-images-1.7-stable.sh  get-images.sh
