[tool.black]
line-length = 100
target-version = ['py37']
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.poetry]
package-mode = false

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
codespell = "^2.3.0"
flake8 = "^7.0.0"
flake8-builtins = "^2.5.0"
flake8-copyright = "^0.2.4"
isort = "^5.13.2"
pep8-naming = "^0.15.0"
pyproject-flake8 = "^7.0.0"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
juju = "<4.0"
blinker = "===1.7.0"
lightkube = "^0.15.6"
pytest = "^8.3.4"
pytest-operator = "^0.43.0"
pyyaml = "^6.0.2"
requests = "^2.32.3"
selenium = "^4.27.1"
selenium-wire = "^5.1.0"
tenacity = "^9.0.0"

[project]
name = "notebook-operators"
requires-python = ">=3.12,<4.0"
